--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,8 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  background-color: #f5eddf;
+  background-image: url("/wood-pattern.png");
 }
 
 a {
