--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,10 @@
 body {
   font-family: 'Gaegu', sans-serif;
-  font-weight: 300;
   font-size: 18px;
+  font-weight: 300;
+  line-height: 1em;
   margin: 0 auto;
   padding: 0;
-  max-width: 1024px;
   background-color: #f5eddf;
   background-image: url("/wood-pattern.png");
 }
@@ -15,21 +15,83 @@ a {
   font-weight: bold;
 }
 
-img {
-  max-width: 100%;
+h1, h2, h3, h4 {
+  margin-top: 0;
 }
 
-nav {
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.paper {
+  width: 816px;
+  min-height: 1056px;
+  margin: 0 auto;
+  position: relative;
+  background: #fff;
+  background: linear-gradient(to bottom, #d9eaf3 0%, #fff 8%) 0 4px;
+  background-size: 100% 1em;
+
+  nav:first-of-type {
+    min-height: 76px;
+    background-color: #fff;
+    text-align: right;
+
+    a {
+      color: #108db8;
+      display: inline-block;
+      padding: 1rem;
+    }
+  }
+
+  section:first-of-type {
+    position: relative;
+    padding: 0 68px;
+  }
+
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   width: 4px;
+  //   top: 0;
+  //   left: 60px;
+  //   bottom: 0;
+  //   border: 1px solid;
+  //   border-color: transparent #efe4e4;
+  // }
+}
+
+
+.paper,
+.paper::before,
+.paper::after {
+  /* Add shadow to distinguish sheets from one another */
+  box-shadow: 2px 1px 1px rgba(0,0,0,0.15);
+}
+
+.paper::before,
+.paper::after {
+  content: "";
+  position: absolute;
   width: 100%;
-  background: #108db8;
+  height: 100%;
+  background-color: #eee;
 }
 
-nav a {
-  color: white;
-  padding: 1rem;
-  display: inline-block;
+/* Second sheet of paper */
+.paper::before {
+  left: 5px;
+  top: 5px;
+  z-index: -1;
 }
 
-.content {
-  padding: 1rem;
+/* Third sheet of paper */
+.paper::after {
+  left: 10px;
+  top: 10px;
+  z-index: -2;
 }
