--- a/src/app.scss
+++ b/src/app.scss
@@ -97,3 +97,22 @@ h2 {
   top: 10px;
   z-index: -2;
 }
+
+.note {
+  float: right;
+  text-decoration: none;
+  color: #000;
+  background:#ffc;
+  border: 1px solid #fec;
+  padding: 1em;
+  margin: 0 1em;
+  display: block;
+  width: 12em;
+  box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+  transition: transform .15s linear;
+  transform: rotate(-3deg);
+
+  ul {
+    padding: 0 1em 0 1em;
+  }
+}
