--- a/src/app.scss
+++ b/src/app.scss
@@ -1,27 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Gaegu');
+// @import url('https://fonts.googleapis.com/css?family=Gaegu');
 
-body {
-  font-family: 'Gaegu', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  line-height: 1em;
-  margin: 0 auto;
-  padding: 0;
-  background-color: #f5eddf;
-  background-image: url("/wood-pattern.png");
-}
+// body {
+//   font-family: 'Gaegu', sans-serif;
+//   font-size: 18px;
+//   font-weight: 300;
+//   line-height: 1em;
+//   margin: 0 auto;
+//   padding: 0;
+//   background-color: #f5eddf;
+//   background-image: url("/wood-pattern.png");
+// }
 
-code, pre {
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 1em;
-}
+// code, pre {
+//   font-size: 16px;
+//   font-weight: 300;
+//   line-height: 1em;
+// }
 
-a {
-  text-decoration: none;
-  color: #108db8;
-  font-weight: bold;
-}
+// a {
+//   text-decoration: none;
+//   color: #108db8;
+//   font-weight: bold;
+// }
 
 h1, h2, h3, h4 {
   margin-top: 0;
@@ -36,29 +36,31 @@ h2 {
 }
 
 .paper {
-  width: 816px;
-  min-height: 95vh;
+  // width: 816px;
+  min-height: 1200px;
   margin: 0 auto;
   position: relative;
   background: #fff;
   background: linear-gradient(to bottom, #d9eaf3 0%, #fff 8%) 0 4px;
   background-size: 100% 1em;
+  padding: 0;
 
   nav:first-of-type {
-    min-height: 76px;
     background-color: #fff;
     text-align: right;
-
-    a {
-      color: #108db8;
-      display: inline-block;
-      padding: 1rem;
-    }
+    width: 100%;
+    height: 120px;
+    padding: 0;
+    z-index: unset;
+    // a {
+    //   color: #108db8;
+    //   display: inline-block;
+    //   padding: 1rem;
+    // }
   }
 
   section:first-of-type {
     position: relative;
-    padding: 0 68px 1em 68px;
   }
 
   // &::before {
@@ -110,13 +112,17 @@ h2 {
   color: #000;
   background:#ffc;
   border: 1px solid #fec;
-  padding: 1em;
+  padding-left: 1em;
   margin: 0 1em;
   display: block;
   width: 12em;
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
   transition: transform .15s linear;
   transform: rotate(-3deg);
+
+  h3 {
+    margin-bottom: 5px;
+  }
 
   ul {
     padding: 0 1em 0 1em;
